--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "ip": "^1.1.5",
     "jsonwebtoken": "^8.2.1",
     "mongoose": "^5.0.17",
-    "underscore": "^1.9.0"
+    "underscore": "^1.9.0",
+    "uuid": "^3.2.1"
   },
   "devDependencies": {
     "morgan": "^1.9.0",
